updated logo and fixed spacing

--- a/sanitrackwebsite/src/index.css
+++ b/sanitrackwebsite/src/index.css
@@ -65,6 +65,7 @@ button:focus-visible {
   align-items: center;
   flex-wrap: wrap;
   gap: 50px;
+  padding: 80px 0 80px; 
 }
 
 .box {
